--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 
 <body>
     
+    <!-- container per sidebar e main -->
+    <div id="main-container" class="flex">
+
+        <!-- sidebar -->
+        <div id="sidebar">
+
+        </div>
+
+        <!-- main -->
+        <main>
+
+        </main>
+
+    </div>
+
+    <div id="now-playing">
+        
+    </div>
 
 </body>
 
