completata top bar fixed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <!-- main -->
         <main>
 
+            <!-- barra top con pulsante upgrade -->
+            <div id="top-bar" class="flex">
+
+                <a href="#" class="button">EFFETTUA L'UPGRADE</a>
+
+            </div>
+            
         </main>
 
     </div>
