aggiunta animazione barra di riproduzione

--- a/index.html
+++ b/index.html
@@ -569,20 +569,16 @@
             <div class="lower flex">
 
                 <div class="time">
-                    0:25
+                    0:00
                 </div>
                 
-                <div class="bar flex">
+                <div class="playing-bar flex">
 
-                    <div class="left">
-
-                    </div>
-
-                    <div class="right">
+                    <div class="inner-playing-bar">
 
                     </div>
 
-                    <div class="cirlce">
+                    <div class="circle">
 
                     </div>
 
